# sshshare

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
sshshare/: Makefile.am  config.cxx  config.hxx  echoprocess.cxx  echoprocess.hxx  linewiseprocess.cxx  linewiseprocess.hxx  main.cxx  makexsd.sh  password.cxx  password.hxx  process.cxx  process.hxx  sampleshare.xml  scp.cxx  scp.hxx  sharedata.xml  shares.cxx  shares.hxx  sshprocess.cxx  sshprocess.hxx  sshshare.cbp  sshshare.cxx  sshshare.hxx  sshshare.xsd  sshshare_config.cxx  sshshare_config.hxx  sshshare_config.xsd  test_main.cxx  validate.sh
test_piper/: main.c  test_piper.cbp
