bin_PROGRAMS=sshshare
sshshare_SOURCES=config.cxx echoprocess.cxx linewiseprocess.cxx main.cxx password.cxx process.cxx scp.cxx shares.cxx sshprocess.cxx sshshare_config.cxx sshshare.cxx

AM_CPPFLAGS=$(DEPS_CFLAGS)
AM_LDFLAGS= $(DEPS_LIBS) -lutil -lboost_filesystem -lboost_system -lboost_regex -lboost_date_time




